// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default onUpdate options 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <button data-test-dummy-button=\\"\\">Click me!</button>
  <!--0-->
  <!--0-->
</p>
<!--0-->
",
}
`;

exports[`default onUpdate options 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
  },
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <button data-test-dummy-button=\\"\\">Click me!</button>
  <!--0-->
  <!--0-->
</p>
<!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "editFormVisible": false,
    "onUpdateValue": [Function],
    "paragraphClassName": "mg-b-0",
    "title": "",
    "value": "",
  },
  "html": "
<h6></h6>
<p class=\\"mg-b-0\\">
  <a>
    <i class=\\"icon-pencil\\"></i>
  </a>
  <!--0-->
</p>
",
}
`;
